Update Game Logic - Fix visual issues on small screns

--- a/css/_game.scss
+++ b/css/_game.scss
@@ -8,7 +8,6 @@ body{
     background: $Medium_Blue_CTA;
     min-height: 100vh;
     z-index: 1;
-    overflow: hidden;
 
     .choose_ciclo {
         padding: 3.2rem 1.5rem;
@@ -17,8 +16,17 @@ body{
 
         align-items: center;
         justify-content: space-between;
-        height: 100%;
+        min-height: 100%;
 
+        .options{
+            margin-top: 4rem;
+            margin-bottom: 4rem;
+
+        }
+
+        #init_game{
+            margin-bottom: 4rem;
+        }
 
     }
 
@@ -28,8 +36,6 @@ body{
         display: flex;
         flex-direction: column;
         gap: 4rem;
-
-
 
         h3 {
             color: $white;
@@ -273,6 +279,12 @@ body{
             grid-template-columns: 1fr 1fr;
             grid-auto-rows: 1fr;
             gap: 1.5em;
+
+            .pair{
+                &.shake{
+                    animation: tilt-shaking 0.3s linear;
+                }
+            }
         }
 
     }
