--- a/css/style.css
+++ b/css/style.css
@@ -1807,7 +1807,7 @@ section.newsletter-section {
   position: absolute;
   width: 100%;
   height: 100%;
-  overflow: hidden;
+  overflow-y: hidden;
 }
 
 .game-background .big-shape,
@@ -1891,7 +1891,6 @@ body.game {
   background: #005E86;
   min-height: 100vh;
   z-index: 1;
-  overflow: hidden;
 }
 
 .challenge-game .choose_ciclo {
@@ -1909,7 +1908,16 @@ body.game {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  height: 100%;
+  min-height: 100%;
+}
+
+.challenge-game .choose_ciclo .options {
+  margin-top: 4rem;
+  margin-bottom: 4rem;
+}
+
+.challenge-game .choose_ciclo #init_game {
+  margin-bottom: 4rem;
 }
 
 .challenge-game .quiz-header {
@@ -2190,6 +2198,11 @@ body.game {
       grid-template-columns: 1fr 1fr;
   grid-auto-rows: 1fr;
   gap: 1.5em;
+}
+
+.challenge-game .select_pairs .pairs .pair.shake {
+  -webkit-animation: tilt-shaking 0.3s linear;
+          animation: tilt-shaking 0.3s linear;
 }
 
 .options {
